--- a/country/Estonia.html
+++ b/country/Estonia.html
@@ -60,7 +60,7 @@
                         <li class="nav-item"><a class="nav-link-cut" href="./India.html"><img src="./../flag/in.png" alt="India">India</a></li>
                         <li class="nav-item"><a class="nav-link-cut" href="./Indonesia.html"><img src="./../flag/id.png" alt="Indonesia">Indonesia</a></li>
                         <li class="nav-item"><a class="nav-link-cut" href="./Ireland.html"><img src="./../flag/ie.png" alt="Ireland">Ireland</a></li>
-                        <li class="nav-item"><a class="nav-link-cut" href="./Israel.html"><img src="./../flag/is.png" alt="Israel">Israel</a></li>
+                        <li class="nav-item"><a class="nav-link-cut" href="./Israel.html"><img src="./../flag/il.png" alt="Israel">Israel</a></li>
                         <li class="nav-item"><a class="nav-link-cut" href="./Italy.html"><img src="./../flag/it.png" alt="Italy">Italy</a></li>
                         <li class="nav-item"><a class="nav-link-cut" href="./Japan.html"><img src="./../flag/jp.png" alt="Japan">Japan</a></li>
                         <li class="nav-item"><a class="nav-link-cut" href="./Kazakhstan.html"><img src="./../flag/kz.png" alt="Kazakhstan">Kazakhstan</a></li>
