--- a/country/Hong_Kong.html
+++ b/country/Hong_Kong.html
@@ -13,7 +13,7 @@
     <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./../css/post.css">
-    <title>Alexei's Postcrads - Croatia</title>
+    <title>Alexei's Postcrads - Hong Kong</title>
 
 
 </head>
@@ -107,18 +107,174 @@
             </nav>
         </div>
         <div class="col-md-9 col-lg-10 content-container">
-           <h1>Croatia</h1>
+           <h1>Hong Kong</h1>
            <div class="row">
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/croatia/HR-22226.jpg" data-caption="Postcard HR-22226">
-                    <img class="img-fluid w-100" src="./../collect/croatia/HR-22226.jpg" alt="Postcard HR-22226">
-                    <div class="bottom-left">HR-22226</div>
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-57872.jpg" data-caption="Postcard HK-57872">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-57872.jpg" alt="Postcard HK-57872">
+                    <div class="bottom-left">HK-57872</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/croatia/HR-60196.jpg" data-caption="Postcard HR-60196">
-                    <img class="img-fluid w-100" src="./../collect/croatia/HR-60196.jpg" alt="Postcard HR-60196">
-                    <div class="bottom-left">HR-60196</div>
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-70096.jpg" data-caption="Postcard HK-70096">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-70096.jpg" alt="Postcard HK-70096">
+                    <div class="bottom-left">HK-70096</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-74749.jpg" data-caption="Postcard HK-74749">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-74749.jpg" alt="Postcard HK-74749">
+                    <div class="bottom-left">HK-74749</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-108170.jpg" data-caption="Postcard HK-108170">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-108170.jpg" alt="Postcard HK-108170">
+                    <div class="bottom-left">HK-108170</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-133066.jpg" data-caption="Postcard HK-133066">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-133066.jpg" alt="Postcard HK-133066">
+                    <div class="bottom-left">HK-133066</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-137983.jpg" data-caption="Postcard HK-137983">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-137983.jpg" alt="Postcard HK-137983">
+                    <div class="bottom-left">HK-137983</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-206396.jpg" data-caption="Postcard HK-206396">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-206396.jpg" alt="Postcard HK-206396">
+                    <div class="bottom-left">HK-206396</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-292390.jpg" data-caption="Postcard HK-292390">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-292390.jpg" alt="Postcard HK-292390">
+                    <div class="bottom-left">HK-292390</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-296104.jpg" data-caption="Postcard HK-296104">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-296104.jpg" alt="Postcard HK-296104">
+                    <div class="bottom-left">HK-296104</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-297643.jpg" data-caption="Postcard HK-297643">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-297643.jpg" alt="Postcard HK-297643">
+                    <div class="bottom-left">HK-297643</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-313291.jpg" data-caption="Postcard HK-313291">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-313291.jpg" alt="Postcard HK-313291">
+                    <div class="bottom-left">HK-313291</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-320085.jpg" data-caption="Postcard HK-320085">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-320085.jpg" alt="Postcard HK-320085">
+                    <div class="bottom-left">HK-320085</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-329880.jpg" data-caption="Postcard HK-329880">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-329880.jpg" alt="Postcard HK-329880">
+                    <div class="bottom-left">HK-329880</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-359303.jpg" data-caption="Postcard HK-359303">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-359303.jpg" alt="Postcard HK-359303">
+                    <div class="bottom-left">HK-359303</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-398277.jpg" data-caption="Postcard HK-398277">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-398277.jpg" alt="Postcard HK-398277">
+                    <div class="bottom-left">HK-398277</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-449435.jpg" data-caption="Postcard HK-449435">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-449435.jpg" alt="Postcard HK-449435">
+                    <div class="bottom-left">HK-449435</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-479771.jpg" data-caption="Postcard HK-479771">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-479771.jpg" alt="Postcard HK-479771">
+                    <div class="bottom-left">HK-479771</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-482913.jpg" data-caption="Postcard HK-482913">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-482913.jpg" alt="Postcard HK-482913">
+                    <div class="bottom-left">HK-482913</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-511555.jpg" data-caption="Postcard HK-511555">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-511555.jpg" alt="Postcard HK-511555">
+                    <div class="bottom-left">HK-511555</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-512398.jpg" data-caption="Postcard HK-512398">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-512398.jpg" alt="Postcard HK-512398">
+                    <div class="bottom-left">HK-512398</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-515327.jpg" data-caption="Postcard HK-515327">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-515327.jpg" alt="Postcard HK-515327">
+                    <div class="bottom-left">HK-515327</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-516971.jpg" data-caption="Postcard HK-516971">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-516971.jpg" alt="Postcard HK-516971">
+                    <div class="bottom-left">HK-516971</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-517108.jpg" data-caption="Postcard HK-517108">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-517108.jpg" alt="Postcard HK-517108">
+                    <div class="bottom-left">HK-517108</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-517235.jpg" data-caption="Postcard HK-517235">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-517235.jpg" alt="Postcard HK-517235">
+                    <div class="bottom-left">HK-517235</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-543119.jpg" data-caption="Postcard HK-543119">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-543119.jpg" alt="Postcard HK-543119">
+                    <div class="bottom-left">HK-543119</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-558903.jpg" data-caption="Postcard HK-558903">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-558903.jpg" alt="Postcard HK-558903">
+                    <div class="bottom-left">HK-558903</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-615435.jpg" data-caption="Postcard HK-615435">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-615435.jpg" alt="Postcard HK-615435">
+                    <div class="bottom-left">HK-615435</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-624406.jpg" data-caption="Postcard HK-624406">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-624406.jpg" alt="Postcard HK-624406">
+                    <div class="bottom-left">HK-624406</div>
                 </a>
             </div>
         </div>
