--- a/country/Hungary.html
+++ b/country/Hungary.html
@@ -13,7 +13,7 @@
     <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./../css/post.css">
-    <title>Alexei's Postcrads - Croatia</title>
+    <title>Alexei's Postcrads - Hungary</title>
 
 
 </head>
@@ -107,18 +107,66 @@
             </nav>
         </div>
         <div class="col-md-9 col-lg-10 content-container">
-           <h1>Croatia</h1>
+           <h1>Hungary</h1>
            <div class="row">
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/croatia/HR-22226.jpg" data-caption="Postcard HR-22226">
-                    <img class="img-fluid w-100" src="./../collect/croatia/HR-22226.jpg" alt="Postcard HR-22226">
-                    <div class="bottom-left">HR-22226</div>
+                <a data-fancybox="gallery" href="./../collect/hungary/HU-82804.jpg" data-caption="Postcard HU-82804">
+                    <img class="img-fluid w-100" src="./../collect/hungary/HU-82804.jpg" alt="Postcard HU-82804">
+                    <div class="bottom-left">HU-82804</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/croatia/HR-60196.jpg" data-caption="Postcard HR-60196">
-                    <img class="img-fluid w-100" src="./../collect/croatia/HR-60196.jpg" alt="Postcard HR-60196">
-                    <div class="bottom-left">HR-60196</div>
+                <a data-fancybox="gallery" href="./../collect/hungary/HU-83413.jpg" data-caption="Postcard HU-83413">
+                    <img class="img-fluid w-100" src="./../collect/hungary/HU-83413.jpg" alt="Postcard HU-83413">
+                    <div class="bottom-left">HU-83413</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hungary/HU-85628.jpg" data-caption="Postcard HU-85628">
+                    <img class="img-fluid w-100" src="./../collect/hungary/HU-85628.jpg" alt="Postcard HU-85628">
+                    <div class="bottom-left">HU-85628</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hungary/HU-87833.jpg" data-caption="Postcard HU-87833">
+                    <img class="img-fluid w-100" src="./../collect/hungary/HU-87833.jpg" alt="Postcard HU-87833">
+                    <div class="bottom-left">HU-87833</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hungary/HU-88397.jpg" data-caption="Postcard HU-88397">
+                    <img class="img-fluid w-100" src="./../collect/hungary/HU-88397.jpg" alt="Postcard HU-88397">
+                    <div class="bottom-left">HU-88397</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hungary/HU-93605.jpg" data-caption="Postcard HU-93605">
+                    <img class="img-fluid w-100" src="./../collect/hungary/HU-93605.jpg" alt="Postcard HU-93605">
+                    <div class="bottom-left">HU-93605</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hungary/HU-107068.jpg" data-caption="Postcard HU-107068">
+                    <img class="img-fluid w-100" src="./../collect/hungary/HU-107068.jpg" alt="Postcard HU-107068">
+                    <div class="bottom-left">HU-107068</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hungary/HU-118900.jpg" data-caption="Postcard HU-118900">
+                    <img class="img-fluid w-100" src="./../collect/hungary/HU-118900.jpg" alt="Postcard HU-118900">
+                    <div class="bottom-left">HU-118900</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hungary/HU-128888.jpg" data-caption="Postcard HU-128888">
+                    <img class="img-fluid w-100" src="./../collect/hungary/HU-128888.jpg" alt="Postcard HU-128888">
+                    <div class="bottom-left">HU-128888</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hungary/HU-144395.jpg" data-caption="Postcard HU-144395">
+                    <img class="img-fluid w-100" src="./../collect/hungary/HU-144395.jpg" alt="Postcard HU-144395">
+                    <div class="bottom-left">HU-144395</div>
                 </a>
             </div>
         </div>
