--- a/country/India.html
+++ b/country/India.html
@@ -13,7 +13,7 @@
     <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./../css/post.css">
-    <title>Alexei's Postcrads - Croatia</title>
+    <title>Alexei's Postcrads - India</title>
 
 
 </head>
@@ -107,18 +107,114 @@
             </nav>
         </div>
         <div class="col-md-9 col-lg-10 content-container">
-           <h1>Croatia</h1>
+           <h1>India</h1>
            <div class="row">
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/croatia/HR-22226.jpg" data-caption="Postcard HR-22226">
-                    <img class="img-fluid w-100" src="./../collect/croatia/HR-22226.jpg" alt="Postcard HR-22226">
-                    <div class="bottom-left">HR-22226</div>
+                <a data-fancybox="gallery" href="./../collect/india/IN-24499.jpg" data-caption="Postcard IN-24499">
+                    <img class="img-fluid w-100" src="./../collect/india/IN-24499.jpg" alt="Postcard IN-24499">
+                    <div class="bottom-left">IN-24499</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/croatia/HR-60196.jpg" data-caption="Postcard HR-60196">
-                    <img class="img-fluid w-100" src="./../collect/croatia/HR-60196.jpg" alt="Postcard HR-60196">
-                    <div class="bottom-left">HR-60196</div>
+                <a data-fancybox="gallery" href="./../collect/india/IN-45397.jpg" data-caption="Postcard IN-45397">
+                    <img class="img-fluid w-100" src="./../collect/india/IN-45397.jpg" alt="Postcard IN-45397">
+                    <div class="bottom-left">IN-45397</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/india/IN-60712.jpg" data-caption="Postcard IN-60712">
+                    <img class="img-fluid w-100" src="./../collect/india/IN-60712.jpg" alt="Postcard IN-60712">
+                    <div class="bottom-left">IN-60712</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/india/IN-64572.jpg" data-caption="Postcard IN-64572">
+                    <img class="img-fluid w-100" src="./../collect/india/IN-64572.jpg" alt="Postcard IN-64572">
+                    <div class="bottom-left">IN-64572</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/india/IN-83618.jpg" data-caption="Postcard IN-83618">
+                    <img class="img-fluid w-100" src="./../collect/india/IN-83618.jpg" alt="Postcard IN-83618">
+                    <div class="bottom-left">IN-83618</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/india/IN-119715.jpg" data-caption="Postcard IN-119715">
+                    <img class="img-fluid w-100" src="./../collect/india/IN-119715.jpg" alt="Postcard IN-119715">
+                    <div class="bottom-left">IN-119715</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/india/IN-132250.jpg" data-caption="Postcard IN-132250">
+                    <img class="img-fluid w-100" src="./../collect/india/IN-132250.jpg" alt="Postcard IN-132250">
+                    <div class="bottom-left">IN-132250</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/india/IN-138626.jpg" data-caption="Postcard IN-138626">
+                    <img class="img-fluid w-100" src="./../collect/india/IN-138626.jpg" alt="Postcard IN-138626">
+                    <div class="bottom-left">IN-138626</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/india/IN-186378.jpg" data-caption="Postcard IN-186378">
+                    <img class="img-fluid w-100" src="./../collect/india/IN-186378.jpg" alt="Postcard IN-186378">
+                    <div class="bottom-left">IN-186378</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/india/IN-197807.jpg" data-caption="Postcard IN-197807">
+                    <img class="img-fluid w-100" src="./../collect/india/IN-197807.jpg" alt="Postcard IN-197807">
+                    <div class="bottom-left">IN-197807</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/india/IN-201351.jpg" data-caption="Postcard IN-201351">
+                    <img class="img-fluid w-100" src="./../collect/india/IN-201351.jpg" alt="Postcard IN-201351">
+                    <div class="bottom-left">IN-201351</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/india/IN-204809.jpg" data-caption="Postcard IN-204809">
+                    <img class="img-fluid w-100" src="./../collect/india/IN-204809.jpg" alt="Postcard IN-204809">
+                    <div class="bottom-left">IN-204809</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/india/IN-247068.jpg" data-caption="Postcard IN-247068">
+                    <img class="img-fluid w-100" src="./../collect/india/IN-247068.jpg" alt="Postcard IN-247068">
+                    <div class="bottom-left">IN-247068</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/india/IN-257134.jpg" data-caption="Postcard IN-257134">
+                    <img class="img-fluid w-100" src="./../collect/india/IN-257134.jpg" alt="Postcard IN-257134">
+                    <div class="bottom-left">IN-257134</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/india/IN-260925.jpg" data-caption="Postcard IN-260925">
+                    <img class="img-fluid w-100" src="./../collect/india/IN-260925.jpg" alt="Postcard IN-260925">
+                    <div class="bottom-left">IN-260925</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/india/IN-295723.jpg" data-caption="Postcard IN-295723">
+                    <img class="img-fluid w-100" src="./../collect/india/IN-295723.jpg" alt="Postcard IN-295723">
+                    <div class="bottom-left">IN-295723</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/india/IN-299499.jpg" data-caption="Postcard IN-299499">
+                    <img class="img-fluid w-100" src="./../collect/india/IN-299499.jpg" alt="Postcard IN-299499">
+                    <div class="bottom-left">IN-299499</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/india/IN-322402.jpg" data-caption="Postcard IN-322402">
+                    <img class="img-fluid w-100" src="./../collect/india/IN-322402.jpg" alt="Postcard IN-322402">
+                    <div class="bottom-left">IN-322402</div>
                 </a>
             </div>
         </div>
