--- a/country/Indonesia.html
+++ b/country/Indonesia.html
@@ -13,7 +13,7 @@
     <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./../css/post.css">
-    <title>Alexei's Postcrads - Croatia</title>
+    <title>Alexei's Postcrads - Indonesia</title>
 
 
 </head>
@@ -107,18 +107,84 @@
             </nav>
         </div>
         <div class="col-md-9 col-lg-10 content-container">
-           <h1>Croatia</h1>
+           <h1>Indonesia</h1>
            <div class="row">
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/croatia/HR-22226.jpg" data-caption="Postcard HR-22226">
-                    <img class="img-fluid w-100" src="./../collect/croatia/HR-22226.jpg" alt="Postcard HR-22226">
-                    <div class="bottom-left">HR-22226</div>
+                <a data-fancybox="gallery" href="./../collect/indonesia/ID-79583.jpg" data-caption="Postcard ID-79583">
+                    <img class="img-fluid w-100" src="./../collect/indonesia/ID-79583.jpg" alt="Postcard ID-79583">
+                    <div class="bottom-left">ID-79583</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/croatia/HR-60196.jpg" data-caption="Postcard HR-60196">
-                    <img class="img-fluid w-100" src="./../collect/croatia/HR-60196.jpg" alt="Postcard HR-60196">
-                    <div class="bottom-left">HR-60196</div>
+                <a data-fancybox="gallery" href="./../collect/indonesia/ID-92119.jpg" data-caption="Postcard ID-92119">
+                    <img class="img-fluid w-100" src="./../collect/indonesia/ID-92119.jpg" alt="Postcard ID-92119">
+                    <div class="bottom-left">ID-92119</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/indonesia/ID-112444.jpg" data-caption="Postcard ID-112444">
+                    <img class="img-fluid w-100" src="./../collect/indonesia/ID-112444.jpg" alt="Postcard ID-112444">
+                    <div class="bottom-left">ID-112444</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/indonesia/ID-132839.jpg" data-caption="Postcard ID-132839">
+                    <img class="img-fluid w-100" src="./../collect/indonesia/ID-132839.jpg" alt="Postcard ID-132839">
+                    <div class="bottom-left">ID-132839</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/indonesia/ID-133697.jpg" data-caption="Postcard ID-133697">
+                    <img class="img-fluid w-100" src="./../collect/indonesia/ID-133697.jpg" alt="Postcard ID-133697">
+                    <div class="bottom-left">ID-133697</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/indonesia/ID-143547.jpg" data-caption="Postcard ID-143547">
+                    <img class="img-fluid w-100" src="./../collect/indonesia/ID-143547.jpg" alt="Postcard ID-143547">
+                    <div class="bottom-left">ID-143547</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/indonesia/ID-144273.jpg" data-caption="Postcard ID-144273">
+                    <img class="img-fluid w-100" src="./../collect/indonesia/ID-144273.jpg" alt="Postcard ID-144273">
+                    <div class="bottom-left">ID-144273</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/indonesia/ID-152036.jpg" data-caption="Postcard ID-152036">
+                    <img class="img-fluid w-100" src="./../collect/indonesia/ID-152036.jpg" alt="Postcard ID-152036">
+                    <div class="bottom-left">ID-152036</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/indonesia/ID-155240.jpg" data-caption="Postcard ID-155240">
+                    <img class="img-fluid w-100" src="./../collect/indonesia/ID-155240.jpg" alt="Postcard ID-155240">
+                    <div class="bottom-left">ID-155240</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/indonesia/ID-194295.jpg" data-caption="Postcard ID-194295">
+                    <img class="img-fluid w-100" src="./../collect/indonesia/ID-194295.jpg" alt="Postcard ID-194295">
+                    <div class="bottom-left">ID-194295</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/indonesia/ID-237531.jpg" data-caption="Postcard ID-237531">
+                    <img class="img-fluid w-100" src="./../collect/indonesia/ID-237531.jpg" alt="Postcard ID-237531">
+                    <div class="bottom-left">ID-237531</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/indonesia/ID-252590.jpg" data-caption="Postcard ID-252590">
+                    <img class="img-fluid w-100" src="./../collect/indonesia/ID-252590.jpg" alt="Postcard ID-252590">
+                    <div class="bottom-left">ID-252590</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/indonesia/ID-273160.jpg" data-caption="Postcard ID-273160">
+                    <img class="img-fluid w-100" src="./../collect/indonesia/ID-273160.jpg" alt="Postcard ID-273160">
+                    <div class="bottom-left">ID-273160</div>
                 </a>
             </div>
         </div>
