--- a/country/Ireland.html
+++ b/country/Ireland.html
@@ -13,7 +13,7 @@
     <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./../css/post.css">
-    <title>Alexei's Postcrads - Croatia</title>
+    <title>Alexei's Postcrads - Ireland</title>
 
 
 </head>
@@ -107,18 +107,24 @@
             </nav>
         </div>
         <div class="col-md-9 col-lg-10 content-container">
-           <h1>Croatia</h1>
+           <h1>Ireland</h1>
            <div class="row">
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/croatia/HR-22226.jpg" data-caption="Postcard HR-22226">
-                    <img class="img-fluid w-100" src="./../collect/croatia/HR-22226.jpg" alt="Postcard HR-22226">
-                    <div class="bottom-left">HR-22226</div>
+                <a data-fancybox="gallery" href="./../collect/ireland/IE-141153.jpg" data-caption="Postcard IE-141153">
+                    <img class="img-fluid w-100" src="./../collect/ireland/IE-141153.jpg" alt="Postcard IE-141153">
+                    <div class="bottom-left">IE-141153</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/croatia/HR-60196.jpg" data-caption="Postcard HR-60196">
-                    <img class="img-fluid w-100" src="./../collect/croatia/HR-60196.jpg" alt="Postcard HR-60196">
-                    <div class="bottom-left">HR-60196</div>
+                <a data-fancybox="gallery" href="./../collect/ireland/IE-158979.jpg" data-caption="Postcard IE-158979">
+                    <img class="img-fluid w-100" src="./../collect/ireland/IE-158979.jpg" alt="Postcard IE-158979">
+                    <div class="bottom-left">IE-158979</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/ireland/IE-177053.jpg" data-caption="Postcard IE-177053">
+                    <img class="img-fluid w-100" src="./../collect/ireland/IE-177053.jpg" alt="Postcard IE-177053">
+                    <div class="bottom-left">IE-177053</div>
                 </a>
             </div>
         </div>
