--- a/country/Guernsey.html
+++ b/country/Guernsey.html
@@ -13,7 +13,7 @@
     <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./../css/post.css">
-    <title>Alexei's Postcrads - Croatia</title>
+    <title>Alexei's Postcrads - Guernsey</title>
 
 
 </head>
@@ -107,18 +107,18 @@
             </nav>
         </div>
         <div class="col-md-9 col-lg-10 content-container">
-           <h1>Croatia</h1>
+           <h1>Guernsey</h1>
            <div class="row">
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/croatia/HR-22226.jpg" data-caption="Postcard HR-22226">
-                    <img class="img-fluid w-100" src="./../collect/croatia/HR-22226.jpg" alt="Postcard HR-22226">
-                    <div class="bottom-left">HR-22226</div>
+                <a data-fancybox="gallery" href="./../collect/guernsey/GG-2748.jpg" data-caption="Postcard GG-2748">
+                    <img class="img-fluid w-100" src="./../collect/guernsey/GG-2748.jpg" alt="Postcard GG-2748">
+                    <div class="bottom-left">GG-2748</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/croatia/HR-60196.jpg" data-caption="Postcard HR-60196">
-                    <img class="img-fluid w-100" src="./../collect/croatia/HR-60196.jpg" alt="Postcard HR-60196">
-                    <div class="bottom-left">HR-60196</div>
+                <a data-fancybox="gallery" href="./../collect/guernsey/GG-11054.jpg" data-caption="Postcard GG-11054">
+                    <img class="img-fluid w-100" src="./../collect/guernsey/GG-11054.jpg" alt="Postcard GG-11054">
+                    <div class="bottom-left">GG-11054</div>
                 </a>
             </div>
         </div>
