--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <div class="row">
             <div class="col-md-2 col-sm-2 col-xs-3 thumb-fl">
                 <a href="./country/Argentina.html">
-                    <img class="img-responsive w-100" src="./collect/argentina/AR-16623.jpg" alt="">
+                    <img class="img-responsive w-100" src="https://www.postallove.com/var/plain_site/storage/images/pocztowki/pozdrowienia-z/pozdrowienia-z-argentyny/pozdrowienia-z-argentyny/383345-57-pol-PL/Pozdrowienia-z-Argentyny_width400_3.jpg" alt="">
                     <div class="bottom-left-bg">Argentina</div>
                 </a>
             </div>
@@ -117,6 +117,49 @@
                 <a href="./country/Australia.html">
                     <img class="img-responsive w-100" src="./collect/australia/AU-452734.jpg" alt="">
                     <div class="bottom-left-bg">Australia</div>
+                </a>
+            </div>
+            <div class="col-md-2 col-sm-2 col-xs-3 thumb-fl">
+                <a href="./country/Austria.html">
+                    <img class="img-responsive w-100" src="./collect/austria/AT-257547.jpg" alt="">
+                    <div class="bottom-left-bg">Austria</div>
+                </a>
+            </div>
+            <div class="col-md-2 col-sm-2 col-xs-3 thumb-fl">
+                <a href="./country/Azerbaijan.html">
+                    <img class="img-responsive w-100" src="./collect/azerbaijan/AZ-1989.jpg" alt="">
+                    <div class="bottom-left-bg">Azerbaijan</div>
+                </a>
+            </div>
+            <div class="col-md-2 col-sm-2 col-xs-3 thumb-fl">
+                <a href="./country/Belarus.html">
+                    <img class="img-responsive w-100" src="https://www.postallove.com/var/plain_site/storage/images/pocztowki/pozdrowienia-z/pozdrowienia-z-bialorusi/pozdrowienia-z-bialorusi/316863-33-pol-PL/Pozdrowienia-z-Bialorusi_width400_3.jpg" alt="">
+                    <div class="bottom-left-bg">Belarus</div>
+                </a>
+            </div>
+            <div class="col-md-2 col-sm-2 col-xs-3 thumb-fl">
+                <a href="./country/Belgium.html">
+                    <img class="img-responsive w-100" src="https://www.postallove.com/var/plain_site/storage/images/pocztowki/pozdrowienia-z/pozdrowienia-z-belgii/pozdrowienia-z-belgii/94719-14-pol-PL/Pozdrowienia-z-Belgii_width400_3.jpg" alt="">
+                    <div class="bottom-left-bg">Belgium</div>
+                </a>
+            </div>
+            
+            <div class="col-md-2 col-sm-2 col-xs-3 thumb-fl" style="padding-top: 10px;">
+                <a href="./country/Brazil.html">
+                    <img class="img-responsive w-100" src="https://www.postallove.com/var/plain_site/storage/images/pocztowki/pozdrowienia-z/pozdrowienia-z-brazylii/pozdrowienia-z-brazylii/301751-24-pol-PL/Pozdrowienia-z-Brazylii_width400_3.jpg" alt="">
+                    <div class="bottom-left-bg">Brazil</div>
+                </a>
+            </div>
+            <div class="col-md-2 col-sm-2 col-xs-3 thumb-fl" style="padding-top: 10px;">
+                <a href="./country/Bulgaria.html">
+                    <img class="img-responsive w-100" src="./collect/bulgaria/BG-63599.jpg" alt="">
+                    <div class="bottom-left-bg">Bulgaria</div>
+                </a>
+            </div>
+            <div class="col-md-2 col-sm-2 col-xs-3 thumb-fl" style="padding-top: 10px;">
+                <a href="./country/Burkina_Faso.html">
+                    <img class="img-responsive w-100" src="./collect/burkina_faso/BF-109.jpg" alt="">
+                    <div class="bottom-left-bg">Burkina Faso</div>
                 </a>
             </div>
           </div>
